example/lib/src/l10n/errors/app_ru.arb
{
  "@@locale": "ru",
  "error": "Произошла ошибка",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Произошла неизвестная ошибка",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Отчёт об ошибке успешно отправлен.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}